--- a/nbs/common.scalers.ipynb
+++ b/nbs/common.scalers.ipynb
@@ -635,11 +635,12 @@
     "    `dim` (int, optional): Dimension over to compute scale and shift. Defaults to -1.<br>\n",
     "    `eps` (float, optional): Small value to avoid division by zero. Defaults to 1e-6.<br>\n",
     "    `num_features`: int=None, for RevIN-like learnable affine parameters initialization.<br>\n",
+    "    `n_series`: int=None, number of time-series, for RevIN-like learnable affine parameters initialization in case of a multivariate forecasting problem.<br>\n",
     "\n",
     "    **References**<br>\n",
     "    - [Kin G. Olivares, David Luo, Cristian Challu, Stefania La Vattiata, Max Mergenthaler, Artur Dubrawski (2023). \"HINT: Hierarchical Mixture Networks For Coherent Probabilistic Forecasting\". Neural Information Processing Systems, submitted. Working Paper version available at arxiv.](https://arxiv.org/abs/2305.07089)<br>\n",
     "    \"\"\"\n",
-    "    def __init__(self, scaler_type='robust', dim=-1, eps=1e-6, num_features=None):\n",
+    "    def __init__(self, scaler_type='robust', dim=-1, eps=1e-6, num_features=None, n_series=None):\n",
     "        super().__init__()\n",
     "        compute_statistics = {None: identity_statistics,\n",
     "                              'identity': identity_statistics,\n",
@@ -668,6 +669,8 @@
     "        assert (scaler_type in scalers.keys()), f'{scaler_type} not defined'\n",
     "        if (scaler_type=='revin') and (num_features is None):\n",
     "            raise Exception('You must pass num_features for ReVIN scaler.')\n",
+    "        if (scaler_type=='revin') and dim == 2 and n_series is None:\n",
+    "            raise Exception('You must pass n_series for ReVIN scaler in a Multivariate model.')\n",
     "\n",
     "        self.compute_statistics = compute_statistics[scaler_type]\n",
     "        self.scaler = scalers[scaler_type]\n",
@@ -677,16 +680,21 @@
     "        self.eps = eps\n",
     "\n",
     "        if (scaler_type=='revin'):\n",
-    "            self._init_params(num_features=num_features)\n",
-    "\n",
-    "    def _init_params(self, num_features):\n",
+    "            self._init_params(num_features=num_features, n_series=n_series)\n",
+    "        \n",
+    "    def _init_params(self, num_features, n_series=None):\n",
     "        # Initialize RevIN scaler params to broadcast:\n",
-    "        if self.dim==1: # [B,T,C]  [1,1,C]\n",
-    "            self.revin_bias = nn.Parameter(torch.zeros(1,1,num_features))\n",
-    "            self.revin_weight = nn.Parameter(torch.ones(1,1,num_features))\n",
-    "        elif self.dim==-1: # [B,C,T]  [1,C,1]\n",
-    "            self.revin_bias = nn.Parameter(torch.zeros(1,num_features,1))\n",
-    "            self.revin_weight = nn.Parameter(torch.ones(1,num_features,1))\n",
+    "        if self.dim == 1: # [B, T, C]  [1, 1, C]\n",
+    "            self.revin_bias = nn.Parameter(torch.zeros(1, 1, num_features))\n",
+    "            self.revin_weight = nn.Parameter(torch.ones(1, 1, num_features))\n",
+    "        elif self.dim == -1: # [B, C, T]  [1, C, 1]\n",
+    "            self.revin_bias = nn.Parameter(torch.zeros(1, num_features, 1))\n",
+    "            self.revin_weight = nn.Parameter(torch.ones(1, num_features, 1))\n",
+    "        elif self.dim == 2: # [B, C, T, n_series]  [1, C, 1, n_series]\n",
+    "            self.revin_bias = nn.Parameter(torch.zeros(1, num_features, 1, n_series))\n",
+    "            self.revin_weight = nn.Parameter(torch.ones(1, num_features, 1, n_series))            \n",
+    "        else:\n",
+    "            raise NotImplementedError(\"Incorrect dimension for revin chosen\")\n",
     "\n",
     "    #@torch.no_grad()\n",
     "    def transform(self, x, mask):\n",
@@ -711,10 +719,15 @@
     "        # However this is only valid for point forecast not for\n",
     "        # distribution's scale decouple technique.\n",
     "        if self.scaler_type=='revin':\n",
-    "            self.x_shift = self.x_shift + self.revin_bias\n",
-    "            self.x_scale = self.x_scale * (torch.relu(self.revin_weight) + self.eps)\n",
-    "\n",
-    "        z = self.scaler(x, x_shift, x_scale)\n",
+    "            z = self.scaler(x, x_shift, x_scale)    \n",
+    "            # self.x_shift = self.x_shift + self.revin_bias\n",
+    "            # self.x_scale = self.x_scale * (torch.relu(self.revin_weight) + self.eps)\n",
+    "            # z = z * self.revin_weight\n",
+    "            z = z * (torch.relu(self.revin_weight) + self.eps)\n",
+    "            z = z + self.revin_bias\n",
+    "        else:\n",
+    "            z = self.scaler(x, x_shift, x_scale)\n",
+    "        \n",
     "        return z\n",
     "\n",
     "    #@torch.no_grad()\n",
@@ -738,6 +751,18 @@
     "        # z = (z / (self.revin_weight + self.eps))\n",
     "        # However this is only valid for point forecast not for\n",
     "        # distribution's scale decouple technique.\n",
+    "        if self.scaler_type == 'revin':\n",
+    "            # For the multivariate case the lagged targets are assumed \n",
+    "            # to be the first channel i.e. revin_bias: [1, C, 1, n_series]\n",
+    "            # with idx = 0 of axis=1 containing the lagged targets\n",
+    "            if self.revin_bias.ndim == 4:\n",
+    "                z = z - self.revin_bias[:, 0]\n",
+    "                # z = z / self.revin_weight[:, 0]            \n",
+    "                z = z / (torch.relu(self.revin_weight[:, 0]) + self.eps)\n",
+    "            else:\n",
+    "                z = z - self.revin_bias\n",
+    "                # z = z / self.revin_weight\n",
+    "                z = z / (torch.relu(self.revin_weight) + self.eps)\n",
     "\n",
     "        x = self.inverse_scaler(z, x_shift, x_scale)\n",
     "        return x\n",
