--- a/nbs/common.base_multivariate.ipynb
+++ b/nbs/common.base_multivariate.ipynb
@@ -124,7 +124,7 @@
     "        self.input_size = input_size\n",
     "        self.n_series = n_series\n",
     "        self.padder = nn.ConstantPad1d(padding=(0, self.h), value=0)\n",
-    "\n",
+    "        \n",
     "        # Loss\n",
     "        self.loss = loss\n",
     "        if valid_loss is None:\n",
@@ -150,13 +150,22 @@
     "        self.optimizer = optimizer\n",
     "        self.optimizer_kwargs = optimizer_kwargs if optimizer_kwargs else {}        \n",
     "\n",
-    "        # Scaler\n",
-    "        self.scaler = TemporalNorm(scaler_type=scaler_type, dim=2) # Time dimension is in the second axis\n",
-    "\n",
-    "        # Variables\n",
+    "        # Compute number of channels\n",
     "        self.futr_exog_list = list(futr_exog_list) if futr_exog_list is not None else []\n",
     "        self.hist_exog_list = list(hist_exog_list) if hist_exog_list is not None else []\n",
     "        self.stat_exog_list = list(stat_exog_list) if stat_exog_list is not None else []\n",
+    "        self.futr_input_size = len(self.futr_exog_list)\n",
+    "        self.hist_input_size = len(self.hist_exog_list)\n",
+    "        self.stat_input_size = len(self.stat_exog_list)\n",
+    "        channels = 1 + self.futr_input_size + self.hist_input_size + self.stat_input_size \n",
+    "\n",
+    "        # Scaler\n",
+    "        self.scaler = TemporalNorm(scaler_type=scaler_type, dim=2, num_features=channels, n_series=n_series) # Time dimension is in the second axis\n",
+    "\n",
+    "        # Variables\n",
+    "        # self.futr_exog_list = list(futr_exog_list) if futr_exog_list is not None else []\n",
+    "        # self.hist_exog_list = list(hist_exog_list) if hist_exog_list is not None else []\n",
+    "        # self.stat_exog_list = list(stat_exog_list) if stat_exog_list is not None else []\n",
     "\n",
     "        # Fit arguments\n",
     "        self.val_size = 0\n",
