--- a/nbs/models.tsmixer.ipynb
+++ b/nbs/models.tsmixer.ipynb
@@ -135,45 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Reversible InstanceNormalization\n",
-    "An Instance Normalization Layer that is reversible, based on [this reference implementation](https://github.com/google-research/google-research/blob/master/tsmixer/tsmixer_basic/models/rev_in.py).<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| exporti\n",
-    "class ReversibleInstanceNorm1d(nn.Module):\n",
-    "    def __init__(self, num_features, eps=1e-5):\n",
-    "        super().__init__()\n",
-    "        self.weight = nn.Parameter(torch.ones(num_features))\n",
-    "        self.bias = nn.Parameter(torch.zeros(num_features))\n",
-    "        self.eps = eps\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # Batch statistics\n",
-    "        self.batch_mean = torch.mean(x, axis=1, keepdim=True).detach()\n",
-    "        self.batch_std = torch.sqrt(torch.var(x, axis=1, keepdim=True, unbiased=False) + self.eps).detach()\n",
-    "        \n",
-    "        # Instance normalization\n",
-    "        x = x - self.batch_mean\n",
-    "        x = x / self.batch_std\n",
-    "        x = x * self.weight\n",
-    "        x = x + self.bias\n",
-    "        \n",
-    "        return x\n",
-    "\n",
-    "    def reverse(self, x):\n",
-    "        # Reverse the normalization\n",
-    "        x = x - self.bias\n",
-    "        x = x / self.weight       \n",
-    "        x = x * self.batch_std\n",
-    "        x = x + self.batch_mean       \n",
-    "\n",
-    "        return x"
+    "## 2. Model"
    ]
   },
   {
@@ -198,7 +160,6 @@
     "    `n_block`: int=2, number of mixing layers in the model.<br>\n",
     "    `ff_dim`: int=64, number of units for the second feed-forward layer in the feature MLP.<br>\n",
     "    `dropout`: float=0.9, dropout rate between (0, 1) .<br>\n",
-    "    `revin`: bool=True, if True uses Reverse Instance Normalization to process inputs and outputs.<br>\n",
     "    `loss`: PyTorch module, instantiated train loss class from [losses collection](https://nixtla.github.io/neuralforecast/losses.pytorch.html).<br>\n",
     "    `valid_loss`: PyTorch module=`loss`, instantiated valid loss class from [losses collection](https://nixtla.github.io/neuralforecast/losses.pytorch.html).<br>\n",
     "    `max_steps`: int=1000, maximum number of training steps.<br>\n",
@@ -232,7 +193,6 @@
     "                 n_block = 2,\n",
     "                 ff_dim = 64,\n",
     "                 dropout = 0.9,\n",
-    "                 revin = True,\n",
     "                 loss = MAE(),\n",
     "                 valid_loss = None,\n",
     "                 max_steps: int = 1000,\n",
@@ -269,10 +229,10 @@
     "                                    num_workers_loader=num_workers_loader,\n",
     "                                    drop_last_loader=drop_last_loader,\n",
     "                                    **trainer_kwargs)\n",
-    "        # Reversible InstanceNormalization layer\n",
-    "        self.revin = revin\n",
-    "        if self.revin:\n",
-    "            self.norm = ReversibleInstanceNorm1d(num_features = n_series)\n",
+    "        # Exogenous variables\n",
+    "        self.futr_input_size = len(self.futr_exog_list)\n",
+    "        self.hist_input_size = len(self.hist_exog_list)\n",
+    "        self.stat_input_size = len(self.stat_exog_list)\n",
     "\n",
     "        # Mixing layers\n",
     "        mixing_layers = [MixingLayer(n_series=n_series, \n",
@@ -291,15 +251,12 @@
     "        x = windows_batch['insample_y']  # x: [batch_size, input_size, n_series]\n",
     "        batch_size = x.shape[0]\n",
     "\n",
-    "        # TSMixer: InstanceNorm + Mixing layers + Dense output layer + ReverseInstanceNorm\n",
-    "        if self.revin:\n",
-    "            x = self.norm(x)\n",
+    "        # TSMixer:  Mixing layers + Dense output layer + ReverseInstanceNorm\n",
+    "        # Note that reverse instance normalization can be applied via 'scaler_type=revin'\n",
     "        x = self.mixing_layers(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        x = self.out(x)\n",
     "        x = x.permute(0, 2, 1)\n",
-    "        if self.revin:\n",
-    "            x = self.norm.reverse(x)\n",
     "\n",
     "        x = x.reshape(batch_size, self.h, self.loss.outputsize_multiplier * self.n_series)\n",
     "        forecast = self.loss.domain_map(x)\n",
@@ -310,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage Examples"
+    "## 3. Usage Examples"
    ]
   },
   {
@@ -344,7 +301,6 @@
     "                n_block=4,\n",
     "                ff_dim=4,\n",
     "                dropout=0,\n",
-    "                revin=True,\n",
     "                scaler_type='standard',\n",
     "                max_steps=80,\n",
     "                early_stop_patience_steps=-1,\n",
