--- a/nbs/examples/BenchmarkModels.ipynb
+++ b/nbs/examples/BenchmarkModels.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "We will show how to:\n",
     "* Load a set of benchmark datasets, used in the academic literature.\n",
-    "* Train a set of models these datasets.\n",
+    "* Train a set of models on these datasets.\n",
     "* Forecast the test set.\n",
     "* Evaluate performance."
    ]
@@ -82,7 +82,7 @@
    "source": [
     "## 3. Load Models\n",
     "\n",
-    "We create a `load_models` function that will return a list of models to evaluate given an output forecast horizon, input size and seed. Feel free to add your model to the list in the function; make sure to import the model in the above import statements. We will use the models mostly with their default settings in this example; only the scaler_type is different for some of the models.\n",
+    "We create a `load_models` function that will return a list of models to evaluate given an output forecast horizon, input size and seed. Feel free to add your model to the list in the function; make sure to import the model in the above import statements. We will use the models mostly with their default settings in this example; only the `scaler_type` is different for some of the models.\n",
     "\n",
     "Note that `TSMixer` and `iTransformer` are multivariate models, which means they require an additional `n_series` parameter as these models will forecast all series in the dataset concurrently."
    ]
@@ -225,7 +225,7 @@
     "- The input size (sequence length) to the models\n",
     "- A set of metrics to evaluate\n",
     "\n",
-    "In this example, we will only evaluate on the `ETTh1` dataset. You can uncomment the other datasets to include them in the benchmark. "
+    "In this example, we will only evaluate on the `ETTm1` dataset. You can uncomment the other datasets to include them in the benchmark. "
    ]
   },
   {
