fix_tweedie_and_studentt

--- a/nbs/losses.pytorch.ipynb
+++ b/nbs/losses.pytorch.ipynb
@@ -70,7 +70,8 @@
     "    NegativeBinomial\n",
     ")\n",
     "\n",
-    "from torch.distributions import constraints"
+    "from torch.distributions import constraints\n",
+    "from numbers import Number"
    ]
   },
   {
@@ -1233,7 +1234,7 @@
     "    if (loc is not None) and (scale is not None):\n",
     "        mean = (mean * scale) + loc\n",
     "        tscale = (tscale + eps) * scale\n",
-    "    df = 2.0 + F.softplus(df)\n",
+    "    df = 3.0 + F.softplus(df)\n",
     "    return (df, mean, tscale)\n",
     "\n",
     "def normal_domain_map(input: torch.Tensor):\n",
@@ -1373,17 +1374,22 @@
     "    - [Jorgensen, B. (1987). Exponential Dispersion Models. Journal of the Royal Statistical Society. \n",
     "       Series B (Methodological), 49(2), 127–162. http://www.jstor.org/stable/2345415](http://www.jstor.org/stable/2345415)<br>\n",
     "    \"\"\"\n",
+    "    arg_constraints = {\n",
+    "        \"log_mu\": constraints.interval(-1e20, 40),\n",
+    "        \"rho\": constraints.interval(1.0001, 1.9999),\n",
+    "    }\n",
+    "    support = constraints.nonnegative\n",
+    "\n",
     "    def __init__(self, log_mu, rho, validate_args=None):\n",
     "        # TODO: add sigma2 dispersion\n",
-    "        # TODO add constraints\n",
-    "        # arg_constraints = {'log_mu': constraints.real, 'rho': constraints.positive}\n",
-    "        # support = constraints.real\n",
     "        self.log_mu = log_mu\n",
     "        self.rho = rho\n",
-    "        assert rho>1 and rho<2, f'rho={rho} parameter needs to be between (1,2).'\n",
-    "\n",
-    "        batch_shape = log_mu.size()\n",
-    "        super(Tweedie, self).__init__(batch_shape, validate_args=validate_args)\n",
+    "        self.eps = 1e-6\n",
+    "        if isinstance(log_mu, Number) and isinstance(rho, Number):\n",
+    "            batch_shape = torch.Size()\n",
+    "        else:\n",
+    "            batch_shape = self.log_mu.size()\n",
+    "        super().__init__(batch_shape, validate_args=validate_args)\n",
     "\n",
     "    @property\n",
     "    def mean(self):\n",
@@ -1409,8 +1415,8 @@
     "            alpha = alpha.expand(shape)\n",
     "            beta = beta.expand(shape)\n",
     "\n",
-    "            N = torch.poisson(rate)\n",
-    "            gamma = torch.distributions.gamma.Gamma(N*alpha, beta)\n",
+    "            N = torch.poisson(rate) + self.eps\n",
+    "            gamma = torch.distributions.gamma.Gamma(N * alpha, beta)\n",
     "            samples = gamma.sample()\n",
     "            samples[N==0] = 0\n",
     "\n",
@@ -1446,9 +1452,10 @@
     "    count and logits based on anchoring `loc`, `scale`.\n",
     "    Also adds Tweedie domain protection to the distribution parameters.\n",
     "    \"\"\"\n",
-    "    log_mu = output[0]\n",
+    "    log_mu = F.hardtanh(output[0], min_val=-1e20, max_val=40)         \n",
+    "    eps = 1e-6\n",
     "    if (loc is not None) and (scale is not None):\n",
-    "        log_mu += torch.log(loc) # TODO : rho scaling\n",
+    "        log_mu += torch.log(loc + eps) # TODO : rho scaling\n",
     "    return (log_mu,)"
    ]
   },
