--- a/nbs/models.nbeats.ipynb
+++ b/nbs/models.nbeats.ipynb
@@ -313,6 +313,12 @@
     "                 optimizer_kwargs = None,\n",
     "                 **trainer_kwargs):\n",
     "\n",
+    "        # Protect horizon collapsed seasonality and trend NBEATSx-i basis\n",
+    "        if h == 1 and ((\"seasonality\" in stack_types) or (\"trend\" in stack_types)):\n",
+    "            raise Exception(\n",
+    "                \"Horizon `h=1` incompatible with `seasonality` or `trend` in stacks\"\n",
+    "            )\n",
+    "\n",
     "        # Inherit BaseWindows class\n",
     "        super(NBEATS, self).__init__(h=h,\n",
     "                                     input_size=input_size,\n",
